<resources>
    <string name="app_name">Client</string>
    <string name="login_str">Login</string>
    <string name="email_str">Email</string>
    <string name="sign_up_str">Sign Up</string>
    <string name="user_name_str">User Name</string>
    <string name="avatar_str">Avatar</string>
    <string name="domain_str">Domain</string>
    <string name="menu_search_garden">Search Garden</string>
    <string name="menu_serach_facility">Search Facility</string>
    <string name="menu_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_str">Welcome</string>
    <string name="profile_str">Profile</string>
    <string name="update_str">Update</string>
    <string name="role_str">Role</string>
    <string name="update_profile_str">Update Profile</string>
    <string name="confirm_str">Confirm</string>
    <string name="add_element_str">Add Element</string>
    <string name="add_str">Add</string>
    <string name="type_str">Type</string>
    <string name="garden_str">Garden</string>
    <string name="facility_str">Facility</string>
    <string name="element_name_str">Element Name</string>
    <string name="location_str">Location</string>
    <string name="element_latitude_str">Latitude</string>
    <string name="element_longitude_str">Longitude</string>
    <string name="search_by_str">Search By</string>
    <string name="name_str">Name</string>
    <string name="distance_str">Distance</string>
    <string name="enter_search_value_str">Enter Search Value (Distance in KM)</string>
    <string name="search_str">Search</string>
    <string name="name_RCV_str">"Name: "</string>
    <string name="location_RCV_str">"Location: "</string>
    <string name="active_RCV_str">"Active: "</string>
    <string name="no_results_found_str">No Results Found</string>
    <string name="details_str">Details</string>
    <string name="active_str">Active</string>
    <string name="facilities_str">Facilities</string>
    <string name="garden_RCV_str">"Garden: "</string>
    <string name="address_str">Address</string>
    <string name="garden_name_str">Enter Garden Name</string>
    <string name="menu_admin_dash">Admin Dashboard</string>
    <string name="element_description_str">Element Description</string>
    <string name="rating_str">Rating</string>
    <string name="vote_str">Vote</string>
    <string name="cancel_str">Cancel</string>
    <string name="description_str">Description</string>
    <string name="mus_group_str">Muscle Group</string>
    <string name="status_str">Status</string>
    <string name="change_status_str">Change Status</string>
    <string name="rating_dialog_text">What do you think about this garden?</string>
    <string name="status_dialog_text">What is the status of this facility?</string>
    <string name="free_str">Free</string>
    <string name="broken_str">Broken</string>
    <string name="occupied_str">Occupied</string>
    <string name="address_RCV_str">"Address: "</string>
    <string name="rating_RCV_str">"Rating: "</string>
    <string name="type_RCV_str">"Type: "</string>
    <string name="status_RCV_str">"Status: "</string>
</resources>
