<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_home"
            android:title="@string/menu_home"/>

        <item
            android:id="@+id/menu_profile"
            android:title="@string/profile_str"/>
        <item
            android:id="@+id/menu_search_garden"
            android:title="@string/menu_search_garden"/>

        <item
            android:id="@+id/menu_search_facility"
            android:title="@string/menu_serach_facility"/>

        <item
            android:id="@+id/menu_add_element"
            android:title="@string/add_element_str"/>

        <item
            android:id="@+id/menu_admin_dash"
            android:title="@string/menu_admin_dash"/>
    </group>
</menu>