<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit_text_background"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_dialog_text"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/status_RGP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/status_RGP_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_str"/>

        <RadioButton
            android:id="@+id/status_RGP_occupied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occupied_str"/>

        <RadioButton
            android:id="@+id/status_RGP_broken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broken_str"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/status_BTN_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/confirm_str"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:elevation="5dp"/>

        <Button
            android:id="@+id/status_BTN_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/cancel_str"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:elevation="5dp"/>
    </LinearLayout>
</LinearLayout>