<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="10dp">

    <TextView
        android:id="@+id/loginStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_str"
        android:textSize="80sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/login_EDT_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginStr"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_background"
        android:elevation="5dp"
        android:hint="@string/email_str"
        android:padding="15dp" />

    <Button
        android:id="@+id/login_BTN_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_str"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_below="@id/login_EDT_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:elevation="5dp"/>

    <Button
        android:id="@+id/login_BTN_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_str"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_below="@id/login_BTN_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:elevation="5dp"/>

    <TextView
        android:id="@+id/login_LBL_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Hello World!"
        android:layout_below="@id/login_BTN_signup"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>