<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:padding="10dp"
    android:orientation="vertical"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@drawable/edit_text_background">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_RCV_str"
                    android:textColor="@color/green"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/facility_row_LBL_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_RCV_str"
                    android:textColor="@color/green"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/facility_row_LBL_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_RCV_str"
                    android:textColor="@color/green"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/facility_row_LBL_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_RCV_str"
                    android:textColor="@color/green"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/facility_row_LBL_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center">
            <Button
                android:id="@+id/facility_row_BTN_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_str"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/button_background"
                android:elevation="5dp"/>
        </LinearLayout>






    </LinearLayout>

</androidx.cardview.widget.CardView>